--- a/src/main/resources/templates/detalhes.html
+++ b/src/main/resources/templates/detalhes.html
@@ -12,6 +12,15 @@
 <div id="activePage" th:data-page="${activePage}"></div>
 <div class="content">
   <div class="container">
+    <div th:if="${mensagemSucesso}" class="alert alert-success fade show my-3" role="alert">
+      <span th:text="${mensagemSucesso}"></span>
+      <button type="button" class="btn-close" hidden data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <div th:if="${mensagemErro}" class="alert alert-danger fade show my-3" role="alert">
+      <span th:text="${mensagemErro}"></span>
+      <button type="button" class="btn-close" hidden data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
     <div class="d-flex justify-content-between">
       <div class="d-flex align-items-start">
         <h2 class="d-inline" th:text="${atividade.titulo}">Titulo</h2>
@@ -56,5 +65,6 @@
 </div>
 <script th:replace="~{fragments/bootstrap :: bootstrapScript}"></script>
 <script th:src="@{/js/tabela-editavel.js}"></script>
+<script th:src="@{/js/fade-alert.js}"></script>
 </body>
 </html>
