--- a/src/main/resources/templates/movimentar.html
+++ b/src/main/resources/templates/movimentar.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="form-floating mb-3">
-            <textarea rows="5" class="form-control mb-5" id="floatingInputDescricao" placeholder="Inserir uma descrição" th:field="*{descricao}"></textarea>
+            <textarea rows="5" class="form-control mb-5" id="floatingInputDescricao" placeholder="Inserir uma descrição" th:field="*{descricao}" required></textarea>
             <label for="floatingInputDescricao">Descrever brevemente o que foi feito ...</label>
           </div>
         </div>
