[feature] incluindo link de relatório no menu admin

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -50,6 +50,11 @@
                 <a class="dropdown-item text-uppercase"
                    th:href="@{/categorias}">Categorias</a>
               </li>
+              <li>
+                <a class="dropdown-item text-uppercase"
+                   target="_blank"
+                   th:href="@{/atividades/relatorio}">Relatório</a>
+              </li>
             </ul>
           </li>
         </ul>
